# reservation

./: .env  Cargo.toml  README.MD  get konwledge.md  postgres-command.md  postgres.md
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  error.rs  lib.rs  pager.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  request.rs  reservation.rs  reservation_date.rs  reservation_filter.rs  reservation_query.rs  reservation_status.rs  reservation_trait.rs
migrations/: 20230307093243_init.down.sql  20230307093243_init.up.sql  20230307140840_reservation.down.sql  20230307140840_reservation.up.sql  20230307141422_reservation_trigger.down.sql  20230307141422_reservation_trigger.up.sql  20230307141753_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
service/: Cargo.toml
service/fixtures/: config.yml
service/src/: lib.rs  main.rs  service.rs  test_utils.rs
service/tests/: service.rs
