[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"
chrono = { version = "0.4.23", features = ["serde"] }
prost-types = "0.11.6"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tonic = { version = "0.8.3", features = ["gzip"] }
thiserror = "1.0.38"

[build-dependencies]
tonic-build = "0.8.4"
proto-builder-trait = "0.5.1"
