[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
async-trait = "0.1.64"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }

[dev-dependencies]
prost-types = "0.11.8"
tokio = { version = "1.25.0", features = ["full"] }
